--- a/_modules/p2pfl/utils.html
+++ b/_modules/p2pfl/utils.html
@@ -389,9 +389,9 @@
 <a class="viewcode-back" href="../../modules/p2pfl.utils.html#p2pfl.utils.set_test_settings">[docs]</a>
 <span class="k">def</span> <span class="nf">set_test_settings</span><span class="p">()</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Set settings for testing.&quot;&quot;&quot;</span>
-    <span class="n">Settings</span><span class="o">.</span><span class="n">GRPC_TIMEOUT</span> <span class="o">=</span> <span class="mi">5</span>
+    <span class="n">Settings</span><span class="o">.</span><span class="n">GRPC_TIMEOUT</span> <span class="o">=</span> <span class="mf">0.5</span>
     <span class="n">Settings</span><span class="o">.</span><span class="n">HEARTBEAT_PERIOD</span> <span class="o">=</span> <span class="mf">0.5</span>
-    <span class="n">Settings</span><span class="o">.</span><span class="n">HEARTBEAT_TIMEOUT</span> <span class="o">=</span> <span class="mi">5</span>
+    <span class="n">Settings</span><span class="o">.</span><span class="n">HEARTBEAT_TIMEOUT</span> <span class="o">=</span> <span class="mi">2</span>
     <span class="n">Settings</span><span class="o">.</span><span class="n">GOSSIP_PERIOD</span> <span class="o">=</span> <span class="mi">0</span>
     <span class="n">Settings</span><span class="o">.</span><span class="n">TTL</span> <span class="o">=</span> <span class="mi">10</span>
     <span class="n">Settings</span><span class="o">.</span><span class="n">GOSSIP_MESSAGES_PER_PERIOD</span> <span class="o">=</span> <span class="mi">100</span>
