--- a/_modules/p2pfl/examples/mnist.html
+++ b/_modules/p2pfl/examples/mnist.html
@@ -389,8 +389,10 @@
 <span class="kn">from</span> <span class="nn">p2pfl.utils</span> <span class="kn">import</span> <span class="p">(</span>
     <span class="n">wait_4_results</span><span class="p">,</span>
     <span class="n">wait_convergence</span><span class="p">,</span>
+    <span class="n">set_test_settings</span>
 <span class="p">)</span>
 
+<span class="n">set_test_settings</span><span class="p">()</span>
 
 <span class="k">def</span> <span class="nf">__parse_args</span><span class="p">()</span> <span class="o">-&gt;</span> <span class="n">argparse</span><span class="o">.</span><span class="n">Namespace</span><span class="p">:</span>
     <span class="n">parser</span> <span class="o">=</span> <span class="n">argparse</span><span class="o">.</span><span class="n">ArgumentParser</span><span class="p">(</span><span class="n">description</span><span class="o">=</span><span class="s2">&quot;P2PFL MNIST experiment using the Web Logger.&quot;</span><span class="p">)</span>
