--- a/modules/p2pfl.learning.frameworks.pytorch.callbacks.scaffold_callback.html
+++ b/modules/p2pfl.learning.frameworks.pytorch.callbacks.scaffold_callback.html
@@ -492,7 +492,7 @@ y_i ← y_i + eta_l * c_i - eta_l * c</p>
 <dt class="field-odd">Parameters<span class="colon">:</span></dt>
 <dd class="field-odd"><ul class="simple">
 <li><p><strong>trainer</strong> (<span class="sphinx_autodoc_typehints-type"><code class="xref py py-class docutils literal notranslate"><span class="pre">Trainer</span></code></span>) – The trainer</p></li>
-<li><p><strong>pl_module</strong> (<span class="sphinx_autodoc_typehints-type"><code class="xref py py-class docutils literal notranslate"><span class="pre">LightningModule</span></code></span>) – The model.</p></li>
+<li><p><strong>pl_module</strong> (<span class="sphinx_autodoc_typehints-type"><code class="xref py py-class docutils literal notranslate"><span class="pre">LightningModule</span></code></span>) – code The model.</p></li>
 </ul>
 </dd>
 <dt class="field-even">Return type<span class="colon">:</span></dt>
