--- a/_modules/p2pfl/learning/aggregators/scaffold.html
+++ b/_modules/p2pfl/learning/aggregators/scaffold.html
@@ -439,7 +439,7 @@
 
 <span class="sd">&quot;&quot;&quot;Callback for SCAFFOLD operations.&quot;&quot;&quot;</span>
 
-<span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">Dict</span><span class="p">,</span> <span class="n">List</span>
+<span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span>
 
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
 
@@ -459,7 +459,7 @@
 <span class="sd">    Due to the complete decentralization of the enviroment, a global model is also maintained in the aggregator.</span>
 <span class="sd">    This consumes additional bandwidth.</span>
 
-<span class="sd">    ::todo:: Improve efficiency by estimating the global model.</span>
+<span class="sd">    ::todo:: Improve efficiency by sharing the global model only each n rounds.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="n">REQUIRED_INFO_KEYS</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;delta_y_i&quot;</span><span class="p">,</span> <span class="s2">&quot;delta_c_i&quot;</span><span class="p">]</span>
@@ -475,13 +475,13 @@
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">node_name</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">global_lr</span> <span class="o">=</span> <span class="n">global_lr</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">c</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">]</span> <span class="o">=</span> <span class="p">[]</span>  <span class="c1"># global control variates</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">global_model_params</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">]</span> <span class="o">=</span> <span class="p">[]</span>  <span class="c1"># simulate global model</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">c</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">]</span> <span class="o">=</span> <span class="p">[]</span>  <span class="c1"># global control variates</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">global_model_params</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">]</span> <span class="o">=</span> <span class="p">[]</span>  <span class="c1"># simulate global model</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">partial_aggregation</span> <span class="o">=</span> <span class="kc">False</span>
 
 <div class="viewcode-block" id="Scaffold.aggregate">
 <a class="viewcode-back" href="../../../../modules/p2pfl.learning.aggregators.scaffold.html#p2pfl.learning.aggregators.scaffold.Scaffold.aggregate">[docs]</a>
-    <span class="k">def</span> <span class="nf">aggregate</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">models</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">P2PFLModel</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="n">P2PFLModel</span><span class="p">:</span>
+    <span class="k">def</span> <span class="nf">aggregate</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">models</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="n">P2PFLModel</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="n">P2PFLModel</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Aggregate the models and control variates from clients.</span>
 
@@ -504,9 +504,8 @@
             <span class="k">for</span> <span class="n">i</span><span class="p">,</span> <span class="n">layer</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">delta_y_i</span><span class="p">):</span>
                 <span class="n">accum_delta_y</span><span class="p">[</span><span class="n">i</span><span class="p">]</span> <span class="o">+=</span> <span class="n">layer</span> <span class="o">*</span> <span class="n">num_samples</span>
 
-        <span class="c1"># Normalize the accumulated model updates</span>
-        <span class="n">accum_delta_y</span> <span class="o">=</span> <span class="p">[</span><span class="n">layer</span> <span class="o">/</span> <span class="n">total_samples</span> <span class="k">for</span> <span class="n">layer</span> <span class="ow">in</span> <span class="n">accum_delta_y</span><span class="p">]</span>
-        <span class="n">accum_delta_y</span> <span class="o">=</span> <span class="p">[</span><span class="n">layer</span> <span class="o">*</span> <span class="bp">self</span><span class="o">.</span><span class="n">global_lr</span> <span class="k">for</span> <span class="n">layer</span> <span class="ow">in</span> <span class="n">accum_delta_y</span><span class="p">]</span>  <span class="c1"># apply global learning rate</span>
+        <span class="c1"># Normalize the accumulated model updates and apply global learning rate</span>
+        <span class="n">accum_delta_y</span> <span class="o">=</span> <span class="p">[(</span><span class="n">layer</span> <span class="o">/</span> <span class="n">total_samples</span><span class="p">)</span> <span class="o">*</span> <span class="bp">self</span><span class="o">.</span><span class="n">global_lr</span> <span class="k">for</span> <span class="n">layer</span> <span class="ow">in</span> <span class="n">accum_delta_y</span><span class="p">]</span>
 
         <span class="c1"># Update global model</span>
         <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">global_model_params</span><span class="p">:</span>
@@ -514,7 +513,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">global_model_params</span> <span class="o">=</span> <span class="p">[</span><span class="n">param</span> <span class="o">+</span> <span class="n">delta</span> <span class="k">for</span> <span class="n">param</span><span class="p">,</span> <span class="n">delta</span> <span class="ow">in</span> <span class="nb">zip</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">global_model_params</span><span class="p">,</span> <span class="n">accum_delta_y</span><span class="p">)]</span>
 
         <span class="c1"># Accumulate control variates</span>
-        <span class="n">delta_c_i_first</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_get_and_validate_model_info</span><span class="p">(</span><span class="n">models</span><span class="p">[</span><span class="mi">0</span><span class="p">])[</span><span class="s2">&quot;delta_c_i&quot;</span><span class="p">]</span>
+        <span class="n">delta_c_i_first</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_get_and_validate_model_info</span><span class="p">(</span><span class="n">models</span><span class="p">[</span><span class="mi">0</span><span class="p">])[</span><span class="s2">&quot;delta_c_i&quot;</span><span class="p">]</span> <span class="c1"># take first model as reference</span>
         <span class="n">accum_c</span> <span class="o">=</span> <span class="p">[</span><span class="n">np</span><span class="o">.</span><span class="n">zeros_like</span><span class="p">(</span><span class="n">layer</span><span class="p">)</span> <span class="k">for</span> <span class="n">layer</span> <span class="ow">in</span> <span class="n">delta_c_i_first</span><span class="p">]</span>
 
         <span class="k">if</span> <span class="n">delta_c_i_first</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
@@ -543,19 +542,19 @@
 
         <span class="c1"># Return the aggregated model with the global model parameters and the control variates</span>
         <span class="n">aggregated_model</span> <span class="o">=</span> <span class="n">models</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span><span class="o">.</span><span class="n">build_copy</span><span class="p">(</span><span class="n">params</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">global_model_params</span><span class="p">,</span> <span class="n">num_samples</span><span class="o">=</span><span class="n">total_samples</span><span class="p">,</span> <span class="n">contributors</span><span class="o">=</span><span class="n">contributors</span><span class="p">)</span>
-        <span class="n">aggregated_model</span><span class="o">.</span><span class="n">add_info</span><span class="p">(</span><span class="s2">&quot;scaffold&quot;</span><span class="p">,</span> <span class="p">{</span><span class="s2">&quot;global_c&quot;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">c</span><span class="p">,</span> <span class="s2">&quot;global_model_params&quot;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">global_model_params</span><span class="p">})</span>
+        <span class="n">aggregated_model</span><span class="o">.</span><span class="n">add_info</span><span class="p">(</span><span class="s2">&quot;scaffold&quot;</span><span class="p">,</span> <span class="p">{</span><span class="s2">&quot;global_c&quot;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">c</span><span class="p">})</span>
 
         <span class="k">return</span> <span class="n">aggregated_model</span></div>
 
 
 <div class="viewcode-block" id="Scaffold.get_required_callbacks">
 <a class="viewcode-back" href="../../../../modules/p2pfl.learning.aggregators.scaffold.html#p2pfl.learning.aggregators.scaffold.Scaffold.get_required_callbacks">[docs]</a>
-    <span class="k">def</span> <span class="nf">get_required_callbacks</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">List</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
+    <span class="k">def</span> <span class="nf">get_required_callbacks</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Retrieve the list of required callback keys for this aggregator.&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="p">[</span><span class="s2">&quot;scaffold&quot;</span><span class="p">]</span></div>
 
 
-    <span class="k">def</span> <span class="nf">_get_and_validate_model_info</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">model</span><span class="p">:</span> <span class="n">P2PFLModel</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">]:</span>
+    <span class="k">def</span> <span class="nf">_get_and_validate_model_info</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">model</span><span class="p">:</span> <span class="n">P2PFLModel</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">]:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Validate the model.</span>
 
