--- a/_modules/p2pfl/management/logger/logger.html
+++ b/_modules/p2pfl/management/logger/logger.html
@@ -753,6 +753,7 @@
         <span class="k">try</span><span class="p">:</span>
             <span class="n">experiment</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_nodes</span><span class="p">[</span><span class="n">addr</span><span class="p">][</span><span class="s2">&quot;Experiment&quot;</span><span class="p">]</span>
         <span class="k">except</span> <span class="ne">KeyError</span><span class="p">:</span>
+            <span class="k">return</span>
             <span class="k">raise</span> <span class="n">NodeNotRegistered</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Node </span><span class="si">{</span><span class="n">addr</span><span class="si">}</span><span class="s2"> not registered.&quot;</span><span class="p">)</span> <span class="kn">from</span> <span class="kc">None</span>
 
         <span class="c1"># Get Round</span>
